[tool.poetry]
name = "code-gpt-interface"
version = "0.1.0"
description = "Una interfaz para generar código a partir de descripciones"
authors = ["maite828 <echeverry.maite@gmail.com>"]
readme = "README.md"
repository = "https://github.com/maite828/code-gpt-interface.git"
keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
pytest = "^5.2"
python = "^3.8"
transformers = "^4.36.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
